# ticketoo

./: .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml
backend/ticketoo/: asgi.py  settings.py  urls.py  wsgi.py
backend/tickets/: admin.py  models.py  serializers.py  urls.py  views.py
backend/tickets/migrations/: 0001_initial.py  0001_squashed_0006_rename_reuced_ticketsale_reduced.py  0002_remove_ticket_reduced_ticketsale.py  0003_alter_ticket_unique_together.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
projekt/: .gitignore  App.xaml  MainWindow.xaml  MainWindow.xaml.cs  Orders.cs  Tickets.cs  projekt.csproj  projekt.sln
projekt/Theme/: PropertyLabelTheme.xaml  PropertyTextBlockTheme.xaml  TextBoxTheme.xaml  TicketChoiceTheme.xaml
